# CODEC

./: ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  build.sh  config.status  configure  configure.ac  dos2unix.sh  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: CodecUtil.h  config.h  config.h.in  config.h.in~
include/audio/: AudioCore.h
include/video/manager/: BufferList.h  DispDrm.h  Memory.h  Rot.h  drm_fourcc.h  xf86drmMode.h
include/video/manager/NX5/: mpi_sys_wrap.h  mpi_vdec.h  mpi_vdec_internal.h  mpi_vo.h  mpi_vo_internal.h  mpi_vpss.h
include/video/manager/NX5/include/: fy_comm_aio.h  fy_comm_jpege.h  fy_comm_vdec.h  fy_comm_vo.h  fy_comm_vpss.h  jpegd.h  sys_bind.h  sys_internal.h  vdec.h
include/video/manager/NX5/include/drv/: jpeg_drv_ioc.h  mmz-userdev.h  sys_drv_ioc.h  tde_drv_ioc.h  vb_drv_ioc.h  vdec_drv_ioc.h  vo_drv_ioc.h  vpss_drv_ioc.h
include/video/vd/: sunxi_display2.h
include/video/ve/: VEncApi.h  ViApi.h  compiler.h  videodev2_new.h
include/video/watermark/: WaterMark.h
src/: ADecodeTest  ADecodeTest.c  AEncodeTest  AEncodeTest.c  AIOTest  AIOTest.c  AudioCodecTest.c  H2642JPEGTest.c  Makefile  Makefile.am  Makefile.in  VDecodeTest  VDecodeTest.c  VEncodeTest  VEncodeTest.c  VPreviewTest.c  WaterMarkTest  WaterMarkTest.c
src/.deps/: ADecodeTest.Po  AEncodeTest.Po  AIOTest.Po  H2642JPEGTest.Po  VDecodeTest.Po  VEncodeTest.Po  WaterMarkTest.Po
test/: Makefile  Makefile.am  Makefile.in  Makefile_back.am  TestDemo  build.sh
test/.deps/: TestDemo.Po
