bin_PROGRAMS = ADecodeTest AEncodeTest AIOTest VDecodeTest


ADecodeTest_FILES = ADecodeTest.c
ADecodeTest_SOURCES = $(ADecodeTest_FILES)
ADDEPS =
ADecodeTest_LDADD = $(ADDEPS)
ADecodeTest_DEPENDENCIES = $(ADDEPS)

AEncodeTest_FILES = AEncodeTest.c
AEncodeTest_SOURCES = $(AEncodeTest_FILES)
AEDEPS =
AEncodeTest_LDADD = $(AEDEPS)
AEncodeTest_DEPENDENCIES = $(AEDEPS)

AIOTest_FILES = AIOTest.c
AIOTest_SOURCES = $(AIOTest_FILES)
AIOTest_DEPS =
# AIOTest_LDADD = $(AIOTest_DEPS) -lasound -lAudioCore
AIOTest_LDADD = $(AIOTest_DEPS)  # for NX5
AIOTest_DEPENDENCIES = $(AIOTest_DEPS)

VDecodeTest_FILES = VDecodeTest.c
VDecodeTest_SOURCES = $(VDecodeTest_FILES)
VDDEPS =
VDecodeTest_LDADD =
VDecodeTest_DEPENDENCIES = $(VDDEPS)